started to add a loan function, fixed the user authentication, passing user id to bookTable func for loan button functionality

--- a/library.html
+++ b/library.html
@@ -31,25 +31,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>                        
         </button>
-        <a class="navbar-brand" href="#">Library</a>
+        <a id="userStatusLine" class="navbar-brand"></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li ><a onclick="booksTable()">Books</a></li>
+          <li ><a onclick="booksTable(user.userId)">Books</a></li>
           <li ><a onclick="customersTable()">Customers</a></li>
           <li ><a >Loans</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a onclick="createLoginForm()"><span class="glyphicon glyphicon-user"></span> Login</a></li>
-          <li><a onclick="createUserSignInForm()"><span class="glyphicon glyphicon-user"></span> Sign in</a></li>
+          <li><a onclick=""><span class="glyphicon glyphicon-user"></span> Logout</a></li>
         </ul>
       </div>
     </div>
   </nav>
-  <div id=""></div>
+  
   <div id="products-container" class="container"></div><br>
   
 <script>
+  let user
   // create the table columns
   function buildTable(columnsTitles){
     var page = `<table class="table">
@@ -79,7 +79,7 @@
 
 
   // create the books table 
-  function booksTable() {
+  function booksTable(user_id) {
     getAllBooks().then((booksData) => {
     var page = buildTable(["#", "Name", "Author", "Year Published", "Book Type", "Status", ""])
     var rawNum = 1;
@@ -93,7 +93,7 @@
           <td>${book.book_type}</td>
           <td>${book.status}</td>`;
       if (book.status == "Available") {
-        page += `<td><button id="loanBtn_${book.id}" type="button"  onclick="" class="btn btn-danger">Loan</button></td>`
+        page += `<td><button id="loanBtn_${book.id}" type="button"  onclick="loanBook(${book.id},${user_id})" class="btn btn-danger">Loan</button></td>`
       };
       page += `</tr>`;
       rawNum++;
@@ -119,7 +119,7 @@
 
 
   function customersTable(){
-    getAllCustomers().then((customerData) => {
+    getAllCustomers().then((customersData) => {
         var rawNum = 1
         var page = buildTable(["#", "Name", "City", "Age", "Email", ""]);
         customersData.forEach((customer) => {
@@ -203,12 +203,12 @@
         // Handle any errors that occurred during the POST request
         console.error("Error:", error);
       });
-      customersTable()
+      createLoginForm()
   }
 
   //create login form 
   function createLoginForm(){
-    var page = `<form id="loginForm" onsubmit="loginUser(event)">
+    var page = `<div><form id="loginForm" onsubmit="loginUser(event)">
                   <div class="form-group">
                     <label for="username">Username:</label>
                     <input type="text" id="username" required class="form-control">
@@ -220,7 +220,8 @@
                   <div class="form-group text-right">
                     <input type="submit" value="Login" class="btn btn-primary">
                   </div>
-                </form>`;
+                </form></div>
+                <div><button id="signinbtn" type="button"  onclick="createUserSignInForm()" class="btn btn-danger">Sign In</div>`;
     document.getElementById("products-container").innerHTML = page;
   }
   
@@ -248,14 +249,32 @@
         });
         // Handle the response data
         console.log(response.data);
+        user = response.data
+        checkUserStatus(user)
+        booksTable(user.userId)
       } catch (error) {
         // Handle any errors that occurred during the POST request
         console.error("Error:", error);
+        createLoginForm()
       }
     } else {
       console.error("CSRF token not found. Make sure your Django server is running and accessible.");
     }
   }
+
+
+  async function getAllLoans() {
+    try {
+      var response = await axios.get("http://127.0.0.1:8000/library/loans");
+      console.log(response.data);
+      var loansData = JSON.parse(response.data);
+      return loansData
+    } catch (error) {
+      console.error("Error fetching loans:", error);
+      return []; // Return an empty array or handle the error accordingly.
+    }
+  }
+  
 
 
   //get CSRF token
@@ -269,7 +288,30 @@
     }
   }
 
-  booksTable();
+
+  // Function to check if the user is logged in
+   function checkUserStatus(user) {
+    try {
+      const userStatusLine = document.getElementById("userStatusLine");
+
+      if (user) {
+        // If the user is authenticated, show "Hello 'user.username'"
+        userStatusLine.innerText = `Hello ${user.username}`;
+      } else {
+        // If the user is not authenticated, show "Please login"
+        userStatusLine.innerText = "Please login";
+      }
+    } catch (error) {
+      console.error("Error checking user status:", error);
+    }
+  }
+
+  function loanBook(book_id,user_id){
+    console.log(`loan book ${book_id} to customer ${user_id}`)
+  }
+
+  
+  createLoginForm();
   
   </script>
     
